# HR-Advisor-Chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  eval.py  eval_dataset.json  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  sql_agent.py
app/static/: ask.html  chart-builder.html  chat.html  dashboard.html  index.html  insights.html
tests/: conftest.py  test_dashboard_filters.py  test_db.py  test_sql_agent.py
