[project]
name = "domain-chatbot"
version = "0.1.0"
description = "First Agentic AI project "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
